objects/RMA_Failure_Code__c.object
<CustomObject>
    <fields>
        <fullName>Fab_Group__c</fullName>
        <label>Fab Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Code__c</fullName>
        <formula>Scrap_Code__c + &apos;-&apos; +  Scrap_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failure Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obsolete_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obsolete Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <label>Org Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scrap_Code__c</fullName>
        <label>Scrap Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scrap_Description__c</fullName>
        <label>Scrap Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scrap_Type__c</fullName>
        <label>Scrap Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <externalId>true</externalId>
        <label>Unique Field</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>RMA Failure Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fab_Group__c</columns>
        <columns>Org_Id__c</columns>
        <columns>Scrap_Code__c</columns>
        <columns>Scrap_Type__c</columns>
        <columns>Unique_Field__c</columns>
        <columns>Scrap_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FC-{00000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Failure Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>